# ray-tracer-challenge

./: .gitignore  Cargo.toml  README.md
examples/: clock.rs  cover.rs  floor.rs  hexagon.rs  obj.rs  pattern.rs  projectile.rs  reflection.rs  sphere.rs  spheres.rs
src/: color.rs  entity.rs  lib.rs  math.rs  model.rs  physics.rs  render.rs
